--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
         <p>Not a blog. Just a front page for my GitHub repos.</p>
         <div class="image-container">
-            <img src="images/image1.jpg" alt="Image 1">
+            <img src="images/AWSServicesTrim.jpg" alt="AWSServicesTrim>
             <img src="images/image2.jpg" alt="Image 2">
         </div>
     </main>
