Adjusted image path.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <main>
         <p>Not a blog. Just a front page for my GitHub repos.</p>
         <div class="image-container">
-            <img src="images/AWSServicesTrim.jpg" alt="AWSServicesTrim>
-            <img src="images/image2.jpg" alt="Image 2">
+            <img src="/images/AWSServicesTrim.jpg" alt="AWSServicesTrim>
+            <img src="/images/image2.jpg" alt="Image 2">
         </div>
     </main>
     <footer>
