--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </header>
     <main>
         <p>Not a blog. Just a front page for my GitHub repos.</p>
-        <div class="image-container">
-            <img src="/images/AWSServicesTrim.jpg" alt="AWSServicesTrim>
-            <img src="/images/image2.jpg" alt="Image 2">
+        <p></p>
+        <div class="links-container">
+            <a href="https://aws.amazon.com/" target="_blank">AWS</a>
         </div>
     </main>
     <footer>
