--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
-            color: #e0e0e0;
+            background-color: #000000;
+            color: #FFA500;
             margin: 0;
             padding: 0;
         }
         header {
             background-color: #2c2c2c;
+            color: #FFFFFF;
             padding: 20px;
             text-align: left;
         }
@@ -31,6 +32,24 @@
         img {
             max-width: 100%;
             height: auto;
+
+        }
+        .links-container {
+            margin-top: 20px;
+            padding-left: 20px;
+        }
+        .links-container a {
+            display: block;
+            color: #FFA500; /* Orange link text */
+            text-decoration: none;
+            margin-bottom: 5px;
+        }
+        .links-container a:link, .links-container a:visited {
+            color: #FFA500; /* Orange link text before and after clicking */
+        }
+        .links-container a:hover {
+            text-decoration: underline;
+
         }
         footer {
             background-color: #2c2c2c;
