--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             color: #FFA500;
             margin: 0;
             padding: 0;
+            background-image: url('/images/Blur.jpg'); /* Background image */
+            background-size: cover; /* Cover the entire background */
+            background-attachment: fixed; /* Make the background image static */
+            background-repeat: no-repeat; /* Do not repeat the background image */
+            background-position: center; /* Center the background image */
         }
         header {
             background-color: #2c2c2c;
