--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>burriseng</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400&display=swap');
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Source Code Pro', monospace;
             background-color: #000000;
             color: #FFA500;
             margin: 0;
@@ -75,7 +76,7 @@
         </div>
     </main>
     <footer>
-        burriseng 2024
+        <p>burriseng | Last Updated: July 30, 2024</p>
     </footer>
 </body>
 </html>
