--- a/index.old.html
+++ b/index.old.html
@@ -8,13 +8,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400&display=swap');
         body {
             font-family: 'Source Code Pro', monospace;
-            background-color: #2a2f3b;
-            color: #FFFFFF;
+            background-color: #000000;
+            color: #FFA500;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #3b4151;
+            background-color: #2c2c2c;
             color: #FFFFFF;
             padding: 20px;
             text-align: left;
@@ -41,20 +41,20 @@
         }
         .links-container a {
             display: block;
-            color: #FFFFFF; /* White link text */
+            color: #FFA500; /* Orange link text */
             text-decoration: none;
             margin-bottom: 5px;
         }
         .links-container a:link, .links-container a:visited {
-            color: #FFFFFF; /* White link text before and after clicking */
+            color: #FFA500; /* Orange link text before and after clicking */
         }
         .links-container a:hover {
             text-decoration: underline;
 
         }
         footer {
-            background-color: #3b4151;
-            color: #FFFFFF;
+            background-color: #2c2c2c;
+            color: #e0e0e0;
             text-align: center;
             padding: 10px;
             position: fixed;
@@ -76,7 +76,8 @@
         </div>
     </main>
     <footer>
-        <p>burriseng | bluewind site design | Last Updated: July 30, 2024</p>
+        <p>burriseng | Last Updated: July 30, 2024</p>
     </footer>
 </body>
 </html>
+
