--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
         <h1>burriseng on GitHub Pages</h1>
     </header>
     <main>
-        <p>Not a blog. Just a front page for my GitHub repos.</p>
+        <p>Not a blog. Just a front page for my GitHub repos here: https://github.com/burriseng.</p>
         <p></p>
         <div class="links-container">
             <a href="https://aws.amazon.com/" target="_blank">AWS</a>
         </div>
     </main>
     <footer>
-        <p>burriseng | bluewind site design | Last Updated: August 04, 2024</p>
+        <p>burriseng | Last Updated: March 10, 2025</p>
     </footer>
 </body>
 </html>
