--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 </head>
 <body>
     <header>
-        <h1>burriseng on GitHub Pages</h1>
+        <h1>burriseng on github.io</h1>
     </header>
     <main>
-        <p>Not a blog. Just a front page for my GitHub repos here: https://github.com/burriseng.</p>
+        <p>Not a blog. Just a front page for my GitHub repos here: <a href>https://github.com/burriseng</a></p>
         <p></p>
         <div class="links-container">
             <a href="https://aws.amazon.com/" target="_blank">AWS</a>
