--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <h1>burriseng on github.io</h1>
     </header>
     <main>
-        <p>Not a blog. Just a front page for my GitHub repos.
+        <p>Not a blog.
         <p></p>
         <div class="links-container">
-            <a href="https://github.com/burriseng" target="_blank">AWS</a>
+            <a href="https://github.com/burriseng" target="_blank">My Github repos.</a>
             <a href="https://aws.amazon.com/" target="_blank">AWS</a>
         </div>
     </main>
