--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p>Not a blog.
         <p></p>
         <div class="links-container">
-            <a href="https://github.com/burriseng" target="_blank">My Github repos.</a>
+            <a href="https://github.com/burriseng" target="_blank">My Github repos</a>
             <a href="https://aws.amazon.com/" target="_blank">AWS</a>
         </div>
     </main>
